--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
   
     <dependencies>
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId><!--gwt-user ver2022.07.05 -->
             <exclusions>
