--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>com.tugalsan.api.thread</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>com.tugalsan.api.file.json</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     
     <build>
